# api/v1/routes/viajes/viajes.js
@@ -2,20 +2,35 @@
 
 const express = require('express');
 const router = express.Router();
+const moment = require('moment')
+const db = require('../../database/database');
 
 /**
  * Obtiene una lista de viajes segun su origen, destino y fechas
+ * parametros obligatorios:
+ * origen
+ * destino
+ * fechamaxima
+ * 
+ * opcionak:
+ * fechaminima
  */
-router.get('/', (req, res)=>{
-    let plazasRequeridas = req.query.plazas;
-    let asientosBebes = req.query.asientos_bebes;
-    let fechaViaje = req.query.fecha_salida;
-    let horaParada = req.query.hora_parada;
-    let origen = req.query.origen;
-    let destino = req.query.destino;
-    let equipaje = req.query.equipaje;
-    res.send("params: " + plazasRequeridas + " - " + asientosBebes  + " - " +  
-    fechaViaje + " - " + horaParada + " - " + origen + " - " + destino + " - " + equipaje);
+router.get('/', async(req, res)=>{
+    console.log(moment().toLocaleString());
+    req.query.fechaminima = req.query.fechaminima || moment().format("DD-MM-YYYY hh:mm:ss");
+    if(req.query.fechamaxima == undefined){
+        res.status(400).send(JSON.stringify({message:'paramero fechamaxima no encontrado'}));
+    }
+    else if(req.query.origen == undefined){
+        res.status(400).send(JSON.stringify({message:'paramero origen no encontrado'}));
+    }
+    else if(req.query.destino == undefined){
+        res.status(400).send(JSON.stringify({message:'paramero destino no encontrado'}));
+    }
+    else{
+        let result = await db.viajes.getViajes(req.query.origen, req.query.destino, req.query.fechaminima, req.query.fechamaxima);
+        res.send(result);
+    }
 });
 
 /**
